// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader.Basic should not show title when title is falsy 1`] = `
<ul
  class="rc-cascader-menu"
  role="menu"
>
  <li
    aria-checked="false"
    class="rc-cascader-menu-item"
    role="menuitemcheckbox"
    title=""
  >
    <div
      class="rc-cascader-menu-item-content"
    >
      1
    </div>
  </li>
  <li
    aria-checked="false"
    class="rc-cascader-menu-item"
    role="menuitemcheckbox"
    title="2"
  >
    <div
      class="rc-cascader-menu-item-content"
    >
      2
    </div>
  </li>
  <li
    aria-checked="false"
    class="rc-cascader-menu-item"
    role="menuitemcheckbox"
    title="3"
  >
    <div
      class="rc-cascader-menu-item-content"
    >
      3
    </div>
  </li>
  <li
    aria-checked="false"
    class="rc-cascader-menu-item"
    role="menuitemcheckbox"
    title="title"
  >
    <div
      class="rc-cascader-menu-item-content"
    >
      4
    </div>
  </li>
</ul>
`;

exports[`Cascader.Basic should render custom dropdown correctly 1`] = `
<div
  class="rc-cascader-dropdown"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="custom-dropdown"
    >
      <div
        class="rc-cascader-menu-holder"
      >
        <ul
          class="rc-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="false"
            class="rc-cascader-menu-item"
            role="menuitemcheckbox"
            title="福建"
          >
            <div
              class="rc-cascader-menu-item-content"
            >
              福建
            </div>
            <div
              class="rc-cascader-menu-item-expand-icon"
            >
              &gt;
            </div>
          </li>
          <li
            aria-checked="false"
            class="rc-cascader-menu-item"
            role="menuitemcheckbox"
            title="浙江"
          >
            <div
              class="rc-cascader-menu-item-content"
            >
              浙江
            </div>
            <div
              class="rc-cascader-menu-item-expand-icon"
            >
              &gt;
            </div>
          </li>
          <li
            aria-checked="false"
            class="rc-cascader-menu-item"
            role="menuitemcheckbox"
            title="北京"
          >
            <div
              class="rc-cascader-menu-item-content"
            >
              北京
            </div>
            <div
              class="rc-cascader-menu-item-expand-icon"
            >
              &gt;
            </div>
          </li>
        </ul>
      </div>
      <hr />
      <span
        class="custom-dropdown-content"
      >
        Hello, DropdownRender
      </span>
    </div>
  </div>
</div>
`;
